--- a/front/package.json
+++ b/front/package.json
@@ -6,13 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "check-types": "tsc --pretty --noEmit",
-    "check-format": "prettier --check .",
-    "check-lint": "eslint . --ext ts --ext tsx --ext js",
-    "format": "prettier --write .",
-    "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
-    "prepare": "husky install"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "12.3.1",
@@ -20,18 +14,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.0",
-    "@types/react": "^18.0.21",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "eslint": "^8.25.0",
-    "eslint-config-next": "12.3.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.3.0",
-    "eslint-plugin-promise": "^6.1.0",
-    "eslint-plugin-react": "^7.31.10",
-    "prettier": "2.7.1",
-    "typescript": "^4.8.4"
+    "eslint": "8.25.0",
+    "eslint-config-next": "12.3.1"
   }
 }
