--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^7.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "recoil": "^0.7.6",
