--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,9 @@
     "@types/node": "^16.11.68",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "echarts-for-react": "^3.0.2",
     "framer-motion": "^7.6.2",
+    "lodash.clonedeep": "^4.5.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
