--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.68",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "axios": "^1.1.3",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^7.6.2",
     "lodash.clonedeep": "^4.5.0",
