REFACT: Refactor MQTT flow

--- a/back/build.gradle
+++ b/back/build.gradle
@@ -65,6 +65,8 @@ spotless  {
   lineEndings "UNIX"
 
   java {
+    targetExclude "build/**"
+
     importOrder()
     googleJavaFormat()
     formatAnnotations()
@@ -114,4 +116,3 @@ configurations {
     }
     querydsl.extendsFrom compileClasspath
 }
-
