--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^7.6.2",
     "lodash.clonedeep": "^4.5.0",
+    "moment": "^2.29.4",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
