--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "react-transition-group": "^4.4.5",
+    "react-webcam": "^7.0.1",
     "recoil": "^0.7.6",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
