FEAT: Update QR Scheme and Host to get them from env

--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -37,3 +37,7 @@ spring:
 mqtt:
   BASE_TOPIC: "${BASE_TOPIC}"
   BROKER_URL: "${BROKER_URL}"
+
+urlmaker:
+  scheme: "${LOGIN_SCHEME}"
+  host: "${LOGIN_HOST}"
