--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,20 @@
 version: "3.9"
 
 services:
-   db:
+  nginx:
+    image: nginx
+    volumes:
+      - ./nginx/nginx.conf.template:/etc/nginx/templates/nginx.conf.template
+      - ./nginx/html:/usr/share/nginx/html
+      - /var/www/certbot:/var/www/certbot
+      - /etc/letsencrypt:/etc/letsencrypt
+    ports:
+      - "80:80"
+      - "443:443"
+    env_file:
+      - .env
+
+  db:
     image: mariadb:latest
     expose:
       - ${MYSQL_PORT}
@@ -18,9 +31,9 @@ services:
       retries: 10
 
   backend:
-    build: .
-    expose:
-      - 8080
+    build: ./back
+    ports:
+      - "8080:8080"
     command: java -jar ./app.jar
     depends_on:
       db:
