--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -1,3 +1,7 @@
+upstream boxthing-backend {
+    server backend:8080;
+}
+
 server {
   listen 80;
 
@@ -26,6 +30,10 @@ server {
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header X-Forwarded-Proto https;
+
+  location /oauth2 {
+    proxy_pass http://boxthing-backend/oauth2;
+  }
 
   location / {
     root /usr/share/nginx/html;
