--- a/hw/.env.template
+++ b/hw/.env.template
@@ -3,3 +3,11 @@ MQTT_HOST=
 MQTT_PORT=
 MQTT_BASE_TOPIC=
 DEVICE_ID=
+PICOVOICE_KEY=
+KEYWORDS_PATH1=
+KEYWORDS_PATH2=
+KEYWORDS_PATH3=
+KEYWORDS_PATH4=
+MODEL_PATH=
+AUDIO_INDEX=
+RECORD_PATH=
